--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.desenvolvimento_web'
+    namespace 'com.example.desenvolvimentoweb'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.desenvolvimento_web"
+        applicationId "com.example.desenvolvimentoweb"
         minSdk 27
         targetSdk 34
         versionCode 1
