--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "desenvolvimento-web"
+rootProject.name = "desenvolvimentoweb"
 include ':app'
